--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ nav ul li:last-child{
     margin-bottom: 100px;
     img{
         width: 100px;
-        background-color: wheat;
+        background-color: whitesmoke;
         border-radius: 20px;
         border: 5px solid white;
     }
