--- a/style.css
+++ b/style.css
@@ -80,14 +80,13 @@ nav ul li:last-child{
         font-size: 80px;
         line-height: 80px;
         font-weight: 700;
-        width: 60%;
         margin-bottom: 20px;
     }
     p{
         font-size: 19px;
         line-height: 30px;
         font-weight: 600;
-        width: 45%;
+        padding-right: 700px ;
         margin-bottom: 40px;
     }
     a{
@@ -97,15 +96,20 @@ nav ul li:last-child{
         background-color: #FF4300;
         padding: 20px 35px;
         border-radius: 50px;
-        width: 200px;
+        width: 250px;
         font-weight: 700;
         text-transform: uppercase;
         margin-bottom: 50px;
+        text-align: center;
     }
 }
 
 .num {
-    margin-bottom: 400px;
+    /* margin-bottom: 400px; */
+    p{
+        font-size: 20px;
+        line-height: 32px;
+    }
     img{
     width: 4%;
     }
@@ -140,13 +144,13 @@ nav ul li:last-child{
     h1{font-size: 48px;
     line-height: 52px;
     font-weight: 700;
-    width: 70%;
+    padding-right:100px ;
     margin-bottom: 20px;
     }
     p{
         line-height: 28px;
         font-weight: 400;
-        width: 90%;
+        padding-right: 50px;
     }
     span{
         color: #FF4300;
@@ -159,9 +163,11 @@ nav ul li:last-child{
         padding: 15px 20px;
         border-radius: 50px;
         width: 150px;
+        text-align: center;
         font-weight: 700;
         margin-top: 30px;
         margin-bottom: 50px;
+        text-transform: uppercase;
     }
 }
 
@@ -197,7 +203,7 @@ nav ul li:last-child{
     h1{
         font-size: 48px;
         line-height: 52px;
-        width: 40%;
+        padding-right: 900px;
         margin-bottom: 50px;
     }
 
@@ -207,7 +213,8 @@ nav ul li:last-child{
     p{
         line-height: 20px;
         font-weight: 600;
-        width: 50%;
+        /* width: 50%; */
+        padding-right: 600px;
         margin-bottom: 10px;
     }
     a{
@@ -237,7 +244,6 @@ nav ul li:last-child{
     h1{
         font-size: 48px;
         line-height: 52px;
-        width: 40%;
         margin-bottom: 20px;
     }
     span{
@@ -246,7 +252,6 @@ nav ul li:last-child{
     p{
         line-height: 28px;
         font-weight: 400;
-        width: 100%;
     }
     a{
         display: block;
@@ -278,9 +283,10 @@ nav ul li:last-child{
     margin-bottom: 100px;
     img{
         width: 100px;
-        background-color: whitesmoke;
+        background-color: whites;
         border-radius: 20px;
         border: 5px solid white;
+        box-shadow: 0 8px 20px rgba(0, 0,0, 0.15);
     }
 }
 
@@ -418,6 +424,7 @@ nav ul li:last-child{
         color: #797872;
         margin-bottom: 10px;
         text-transform: uppercase;
+        font-weight: 700;
     }
     a{
         text-decoration: none;
@@ -462,69 +469,141 @@ nav ul li:last-child{
 }
 
 
-@media screen and (max-width:768px) {
-    body{
-        box-sizing: border-box;
-    }
+@media screen and (max-width:720px) {
 
     nav{
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin: 0;
+        padding: 20px 10px;
         .logo{
-            img{
-                width: 60%;
+            margin: 0;
+            width: 70%;
+            svg{
+                width: 100px;
             }
         }
         .app{
+            margin: 0;
             display: block;
-            margin-left: 30%;
-            width: 30%;
+            text-align: center;
             a{
-                padding: 8px 12px;
+                padding: 5px;
             }
             
         }
         .sidebar{
+            margin: 0;
             text-align: center;
             display: block;
             width: 10%;
-            margin-right: 20px;
+            img{
+                width: 30px;
+            }
         }
     }
     nav .list{
         display: none;
     }
     .container{
-        padding: 0 20px;
+        padding: 0 10px;
     }
+    .hero{
+        padding: 20px 0;
+        margin-bottom: 0;
+        padding-bottom: 0;
+        height: 550px;
+    }
+    .hero-text{
+        text-align: center;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 30px 0;
+        padding-bottom: 0;
+    h1{
+        font-size: 40px;
+        line-height: 44px;
+        margin-bottom: 20px;
+    }
+    p{
+        font-size: 16px;
+        line-height: 28px;
+        padding-right: 0px;
+        margin-bottom: 40px;
+    }
+    a{
+        padding: 10px 15px;
+        width: 200px;
+        margin-bottom: 50px;
+    }
+}
+
+.num{
+    margin-bottom: 100px;
+}
+
+.partners{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    p{
+        display: none;
+    }
+    img{
+        width: 150px;
+    }
+    .uber{
+        width: 80px;
+    }
+}
+
+
 
     .steps-grid{
         display: flex;
         flex-direction: column;
+        margin: 0;
+        padding-top: 50px;
     }
 
     .explanation{
-        padding:0 45% 0 0;
-        h1{
-            font-size: 34px;
-            line-height: 40px;
-        }
-        p{
-            line-height: 28px;
-        }
+    h1{font-size: 32px;
+    line-height: 40px;
+    font-weight: 700;
+    margin-bottom: 20px;
     }
+    p{
+        font-size: 16px;
+        line-height: 28px;
+    }
+    a{
+        padding: 15px;
+        width: 150px;
+        margin-top: 30px;
+        margin-bottom: 50px;
+    }
+}
 
     .plans{
-        margin-right: 30%;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    img{
+        width: 80px;
     }
+}
 
     .explore{
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: 1fr;
         justify-content: center;
         align-items: center;
         font-weight: 400;
+        padding-right: 0;
+        padding: 50px 10px;
+        margin: 0;
         h1{
             font-size: 34px;
             line-height: 40px;
@@ -532,28 +611,31 @@ nav ul li:last-child{
         p{
             font-size:16px ;
             line-height: 18px;
-            width: 65%;
         }
         a{
             margin-bottom: 50px;
+            padding: 15px;
         }
     }
 
     .right-sec{
         img{
-            width: 500px;
+            width: 250px;
         }
     }
     
     .text{
+        text-align: center;
+        padding: 0 20px;
         h4{
             font-size: 20px;
             line-height: 32px;
-            font-weight: 400;
+            font-weight: 700;
         }
     }
 
     .props{
+        margin: 50px;
         img{
             width: 70px;
         }
@@ -563,18 +645,20 @@ nav ul li:last-child{
         position: relative;
         bottom: 10rem;
         left: 0;
-        padding: 20px 40px;
         background-color: #2C2926;
         color: white;
         font-weight: 400;
+        padding: 40px 10px;
         h1{
             font-size: 34px;
             line-height: 40px;
+            padding-right: 100px;
         }
         p{
             font-size: 16px;
             line-height: 28px;
             font-weight: 400;
+            padding: 0;
         }
         a{
             font-size: 14px;
@@ -585,31 +669,62 @@ nav ul li:last-child{
     .impact-card{
         display: flex;
         flex-direction: column;
+        padding: 0 30px;
     }
+
+    .impact{
+        padding: 50px 0;
+}
+
+    .impact-text1{
+        font-size: 18px;
+        line-height: 52px;
+        padding: 70px 4px;
+}
+    .impact-pop{
+        h1{
+            font-size: 80px;
+            line-height: 80px;
+            margin-top: 30px;
+        }
+        h3{
+            font-size: 28px;
+            line-height: 32px;
+            margin-top: 40px;
+        }
+        p{
+            padding: 0;
+            line-height: 28px;
+            margin-top: 20px;
+        }
+}
 
     .mockup-section{
         background-color: #FF4300;
         margin:0;
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: 1fr;
         align-items: start;
-        padding: 10px 0;
-        height: 30%;
+        padding: 10px;
+        position: relative;
     }
 
     .mockup-img{
+        position: absolute;
+        bottom: -60%;
+
         img{
-            width: 300px;
-            margin:0 40%;
+            width: 200px;
         }
     }
 
     .mockup-card{
-        margin: 100px 0 200px 0;
+        margin: 50px 0 250px 0;
     }
 
     .mockup-text{
-        padding: 0 20px;
+        margin: 0;
+        padding: 0;
         width: 100%;
         max-height: fit-content;
         h1{
@@ -636,17 +751,19 @@ nav ul li:last-child{
     }
 
     .info-img{
-        margin-right: 30%;
+        margin: 0;
     }
+
 
     .info-card{
         display: flex;
         flex-direction: column;
         align-items: start;
         justify-content: center;
+        padding: 0 10px;
     }
 
-    .info-text{
+    .info-text ul{
         display: flex;
         flex-direction: column;
         li{
@@ -657,9 +774,12 @@ nav ul li:last-child{
     .region{
         text-align: start;
         margin-top: 50px;
+        font-size: 12px;
+        line-height: 14px;
     }
 
     .CR-page{
+        margin: 0;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -667,6 +787,6 @@ nav ul li:last-child{
 
     .CR-list ul li:first-child{
         list-style: none;
+        margin: 0;
     }
-
 }
